--- a/microservice/layered-microservice/presentation/textbook-catalog/package.json
+++ b/microservice/layered-microservice/presentation/textbook-catalog/package.json
@@ -11,10 +11,10 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "3.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=5002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
